syntax = "proto3";
package qbtc.qbtc.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/btcq-org/qbtc/x/qbtc/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = true;
option (gogoproto.stringer_all) = false;

message Attestation {
  string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  bytes signature = 2;
}

message MsgBtcBlock {
  option (cosmos.msg.v1.signer) = "signer";
  option (amino.name) = "btcq/MsgBtcBlock";

  // The height of the reported Bitcoin block
  uint64 height = 1;

  // The hash of the reported Bitcoin block
  string hash = 2;

  // compressed bytes of BTC block
  bytes block_content = 3;

  repeated Attestation attestations = 4;
  string signer = 5 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}